--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^3.26.3",
+    "babel-plugin-import": "^1.13.0",
     "marked": "^0.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -22,7 +24,7 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
+  },  
   "browserslist": {
     "production": [
       ">0.2%",
