--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.3",
     "babel-plugin-import": "^1.13.0",
+    "http-proxy-middleware": "^0.20.0",
     "marked": "^0.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -24,7 +25,7 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  },  
+  },
   "browserslist": {
     "production": [
       ">0.2%",
